<resources>
    <!-- Titles of activity -->
    <string name="title_app">Wirtualny dziekanat</string>
    <string name="title_activity_password_change">Zmiana hasła</string>
    <string name="title_activity_add_student">Dodaj studenta</string>
    <string name="title_activity_add_employee">Dodaj pracownika</string>
    <string name="title_activity_add_lecturer">Dodaj prowadzącego</string>
    <string name="title_activity_add_course">Dodaj przedmiot</string>
    <string name="title_activity_menu_dormitory">Akademiki</string>
    <string name="title_activity_waiting_room">Poczekalnia</string>
    <string name="title_activity_add_field_of_study">Dodaj kierunek</string>
    <string name="title_activity_edit_student_data">Edytuj dane studenta</string>
    <string name="title_activity_menu_finance">Moje finanse</string>

    <!-- Other strings -->
    <string name="name_pk">Politechnika Krakowska</string>
    <string name="name_of_pk">im. Tadeusza Kościuszki</string>

    <!-- Hints for text fields -->
    <string name="prompt_NIU">ID użytkownika(niu)</string>
    <string name="prompt_password">Hasło</string>
    <string name="prompt_current_password">Aktualne hasło</string>
    <string name="prompt_new_password">Nowe hasło</string>
    <string name="prompt_repeat_password">Powtórz nowe hasło</string>

    <!-- Strings for actions (buttons)-->
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_log_out">Wyloguj</string>
    <string name="action_change">Zmień</string>
    <string name="submit_course">Zatwierdź przedmiot</string>
    <string name="submit_an_application">Złóż wniosek</string>
    <string name="application_for_a_reservation">Złóż wniosek o rezerwację</string>
    <string name="enter_the_grade">Wpisz ocenę</string>

    <!-- Error messages -->
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="error_invalid_one">Niepoprawny niu lub hasło</string>
    <string name="error_current_password">Niepoprawne hasło</string>
    <string name="error_is_not_the_same">Powtórzone hasło zawiera błędy</string>

    <!-- Strings related to MenuActivity -->
    <string name="my_data">Moje\ndane</string>
    <string name="my_studies">Moje\nstudia</string>
    <string name="my_plan">Mój\nplan</string>
    <string name="my_finances">Moje\nfinanse</string>
    <string name="dorms">Akademiki</string>
    <string name="password_change">Zmiana\nhasła</string>

    <!-- TODO -->
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to EmployeeMenuActivity -->
    <string name="add_student">Dodaj\nstudenta</string>
    <string name="add_lecturer">Dodaj\nprowadzącego</string>
    <string name="add_employee">Dodaj\npracownika</string>
    <string name="add_course">Dodaj\nprzedmiot</string>
    <string name="add_field_of_study">Dodaj\nkierunek</string>
    <string name="waiting_room">Poczekalnia</string>
    <string name="edit_student_from_employee">Edytuj dane studenta</string>

    <!-- Hints for AddUserActivity -->
    <string name="prompt_niu">Niu</string>
    <string name="prompt_album_number">Numer albumu</string>
    <string name="prompt_pesel">Pesel</string>
    <string name="prompt_first_name">Imię</string>
    <string name="prompt_last_name">Nazwisko</string>
    <string name="prompt_family_name">Nazwisko rodowe</string>
    <string name="prompt_sex">Płeć</string>
    <string name="prompt_address">Adres</string>
    <string name="prompt_city_or_village">Miasto/wieś</string>
    <string name="prompt_voivodeship">Województwo</string>
    <string name="prompt_country">Kraj</string>
    <string name="prompt_distance_from_the_check_in_place">Odległość od miejsca zameldowania</string>
    <string name="prompt_date_of_birth">Data urodzenia</string>
    <string name="prompt_place_of_birth">Miejsce urodzenia</string>
    <string name="prompt_father_name">Imię ojca</string>
    <string name="prompt_mother_name">Imię matki</string>
    <string name="prompt_mother_family_name">Nazwisko rodowe matki</string>
    <string name="prompt_marital_status">Stan cywilny</string>
    <string name="prompt_foreigner">Obcokrajowiec</string>
    <string name="prompt_phone_number">Telefon</string>
    <string name="prompt_other_number">Inny telefon</string>
    <string name="prompt_bank_account">Konto bankowe studenta</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_date_of_student_start">Data rozpoczęcia studiów</string>
    <string name="prompt_term">Semestr</string>

    <!-- Hints for AddCourseActivity -->
    <string name="prompt_course_no">Numer przedmiotu</string>
    <string name="prompt_course_name">Nazwa przedmiotu</string>
    <string name="prompt_course_ects">Liczba punktów ECTS</string>
    <string name="prompt_course_term">Semestr</string>
    <string name="prompt_course_department">Wydział</string>
    <string name="prompt_course_hour_amount">Liczba godzin</string>

    <!-- Strings related to MenuDormitoryActivity -->
    <string name="application_for_a_dormitory">Wniosek o akademik</string>
    <string name="reservations">Rezerwacje</string>
    <string name="accommodation">Zakwaterowanie</string>
    <string name="history_about_dorms">Historia o akademikach</string>

    <!-- Strings related to MenuFinanceActivity -->
    <string name="payments">Płatności</string>
    <string name="benefits">Świadczenia</string>
    <string name="declaration_of_installments">Deklaracja rat</string>

    <!-- Strings related to MenuTimetableActivity -->
    <string name="grades">Oceny</string>
    <string name="timetable">Organizacja roku\nakademickiego</string>
    <string name="syllabus">Sylabus</string>

    <!-- Toast notification -->
    <string name="add_course_toast">Dodano przedmiot</string>
    <string name="add_employee_toast">Dodano pracownika</string>
    <string name="add_lecturer_toast">Dodano prowadzącego</string>
    <string name="add_student_toast">Dodano studenta</string>
    <string name="password_changed">Hasło zostało zmienione</string>
    <string name="application_sent">Wniosek wysłany</string>
    <string name="assign_a_dorm">Przydzielono akademik</string>
    <string name="add_field_of_study_toast">Dodano kierunek</string>
    <string name="application_information">Wniosek został już złożony lub nie zostałeś uprawniony do składania wniosku</string>
    <string name="edit_student_data">Dane studenta zostały zaktualizowane</string>

    <!-- Hints for AssignADormActivity -->
    <string name="prompt_dorm_name">Nazwa akademika</string>
    <string name="prompt_room_name">Pokój</string>

    <!-- Hints for AddFieldOfStudyActivity -->
    <string name="prompt_field_of_study_name">Nazwa kierunku</string>
    <string name="prompt_department_name">Nazwa wydziału</string>

    <!-- Selection information using a spinner -->
    <string name="choose_dorm">Wybierz akademik:</string>
    <string name="choose_course">Wybierz przedmiot:</string>
    <string name="choose_department">Wybierz wydział:</string>
    <string name="choose_student">Wybierz studenta:</string>

    <!-- Other Strings TextView -->
    <string name="information">Informacje:</string>
    <string name="lack">brak</string>
    <string name="dorm">Akademik:</string>
    <string name="blank">  -</string>
    <string name="room">Pokój:</string>
    <string name="text_information_about_courses"><![CDATA[Zacznij wpisywać przedmiot, następnie z listy podpowiedzi wybierz jeden. Wzór -> \"wydział semestr nazwa\"]]></string>
    <string name="text_information_about_field_of_study"><![CDATA[Zacznij wpisywać kierunek, następnie z listy podpowiedzi wybierz jeden. Wzór -> \"wydział kierunek\"]]></string>

    <!-- Other Strings AutoCompleteTextView -->
    <string name="write_course">Zacznij wpisywać przedmiot...</string>
    <string name="write_field_of_study">Zacznij wpisywać kierunek..</string>
    <string name="prompt_course_field_of_study">Kierunek</string>
    <string name="prompt_mark_for_student">Ocena</string>

    <string name="delete_application">Anuluj wniosek</string>
    <string name="delete_application_information">Wniosek został anulowany</string>
    <string name="the_application_has_not_been_submitted">Wniosek nie został jeszcze złożony</string>
    <string name="edit_data">Edytuj dane</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="edit_data_student">Dane zaktualizowane</string>
    <string name="add_grade_toast">Dodano ocenę</string>


</resources>
