<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".student.dormitory.AccomodationActivity"
    tools:showIn="@layout/activity_accomodation">

    <TextView
        android:id="@+id/dorm"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="none"
        android:text="@string/dorm"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="3dp" />

    <TextView
        android:id="@+id/which_dorm"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:inputType="none"
        android:text="@string/blank"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/dorm"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/room"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginTop="15dp"
        android:inputType="none"
        android:text="@string/room"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/which_dorm"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/which_room"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:inputType="none"
        android:text="@string/blank"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/room"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>